[package]
name = "twiboot-flasher"
version = "0.1.0"
edition = "2021"
authors = ["Gamadril"]
description = "TWI/I2C bootloader flasher for AVR microcontrollers"
license = "MIT"

[[bin]]
name = "twiboot-flasher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
i2cdev = "0.6"
